--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.3",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
